replace LinkedList with List